1999-03-13  Tor Lillqvist  <tml@iki.fi>

	* configure.in acconfig.h: Check for dirent.h and pwd.h.

	* gtk/gtkfilesel.c: Use g_get_current_dir(). Merge in Win32
	version: Use G_DIR_SEPARATOR, g_path_is_absolute, no tilde
	expansion (based on HAVE_PWD_H), allow for drive letters. UNC
	names not handled yet. Also, code from Craig Setera's port to
	Win32 that uses cygwin.dll

Tue Mar  9 01:01:28 1999  Tim Janik  <timj@gtk.org>

        * gdk/gdkfont.c (gdk_font_load): first lookup the xfont ID in our
        font hash table, if we have a GdkFontPrivate entry for this font
        already, simply increment its reference count, provided by Olaf Dietsche
        <olaf.dietsche+list.gtk@netcologne.de>.

        * gtk/gtkstyle.c (gtk_style_copy): plug a GdkFont reference leak, fix
        provided by Olaf Dietsche <olaf.dietsche+list.gtk@netcologne.de>.

1999-03-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkstyle.c (gtk_default_draw_handle): Significantly reduced
	the number of calls to gdk_draw_point() (and thus to X) by
	clipping the points by hand.

	* gtk/gtkhandlebox.c (draw_textured_frame): Actually make use of
	the clip parameter.
	(gtk_handle_box_paint): Only paint the handle if the expose area
	intersects it.

Sun Mar  7 18:46:37 1999  ape@lrdpf.spacetec.no  (Asbjorn Pettersen)

	* gtk/gtkmain.c (add_dll_suffix): Add this function (OS/2 ver.)

Sun Mar  7 11:43:34 1999  ape@spacetec.no  (Asbjorn Pettersen)

	* gtk/gtkthemes.c (gtk_theme_engine_get): Add OS/2 changes.
	Added function gen_8_3_dll_name(gchar *name, gchar *fullname).

Fri Mar  5 09:12:24 1999  ape@lrdpf.spacetec.no  (Asbjorn Pettersen)

	* gtk/gtkitemfactory.c (gtk_item_factory_parse_rc): Open file in
	 textmode (O_TEXT) for OS/2 version.

Sun Feb 28 16:46:02 1999  Stefan Jeske  <stefan@gtk.org>

	* gtk/gtkspinbutton.[c,h] gtk/testgtk.c: Added two new signals to 
	GtkSpinButton, "input" and "output", to make the output more flexible.