@@ -5,9 +5,13 @@
 	* gtk/gtkfilesel.c: Use g_get_current_dir(). Merge in Win32
 	version: Use G_DIR_SEPARATOR, g_path_is_absolute, no tilde
 	expansion (based on HAVE_PWD_H), allow for drive letters. UNC
-	names not handled yet. Also, code from Craig Setera's port to
-	Win32 that uses cygwin.dll
+	paths (\\server\share\...) not handled yet. Also, code from Craig
+	Setera's port to Win32 that uses cygwin.dll
 
+	* gtk/gtkfilesel.c: Don't append a * to the pattern to complete if
+	the user entered one herself.  This way one can complete *.h and
+	don't get matches on any .help files, for instance.
+	
 Tue Mar  9 01:01:28 1999  Tim Janik  <timj@gtk.org>
 
         * gdk/gdkfont.c (gdk_font_load): first lookup the xfont ID in our
